# lab09

./: CMakeLists.txt  cliente.py  comments.txt  file_processor.proto  server.cpp
client_python/: file_processor_pb2.py  file_processor_pb2_grpc.py  requirements.txt
proto/: file_processor.grpc.pb.cc  file_processor.grpc.pb.h  file_processor.pb.cc  file_processor.pb.h  file_processor.proto  file_processor_pb2.py  file_processor_pb2_grpc.py
server_cpp/: CMakeLists.txt  file_processor_service_impl.h  server.cc
